--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="content">
 
       <section class="lead">
-        <H1 class="lead__title">Путешествия по России</H1>
+        <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="images/lead__image.jpg" alt="Маршрут поезда наложенный фон фотографии купе" class="lead__image">
         <p class="lead__caption">ваша полка — верхняя</p>
