Устранил замечания 3 этапа ревью

--- a/index.html
+++ b/index.html
@@ -25,17 +25,21 @@
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="images/lead__image.jpg" alt="Маршрут поезда наложенный фон фотографии купе" class="lead__image">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <p class="lead__caption">ваша&nbsp;полка&nbsp;&mdash;&nbsp;верхняя</p>
       </section>
 
       <section class="intro">
         <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
-          красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова —
-          смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <p class="intro__text">По&nbsp;опросам&nbsp;ВЦИОМ,&nbsp;95%&nbsp;россиян мечтают&nbsp;куда-нибудь&nbsp;поехать,
+          но&nbsp;только&nbsp;36%&nbsp;планируют&nbsp;провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома,
+          не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми
+          лесами Саян и&nbsp;суровыми льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов
+          на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая
+          молодая мама,&nbsp;которая&nbsp;взяла&nbsp;в&nbsp;охапку&nbsp;троих детей, усадила их&nbsp;в&nbsp;свою
+          &laquo;Ладу&raquo;
+          и&nbsp;проехала 20&nbsp;тысяч километров
+          по&nbsp;родной стране. Мы&nbsp;выбрали
+          и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
           <li>Часовых поясов <span class="intro__text-meaning">11</span></li>
           <li>Объектов природного наследия ЮНЕСКО <span class="intro__text-meaning">12</span></li>
@@ -77,7 +81,8 @@
             <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
               горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн
               Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
-            <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника
+            <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
+              Для&nbsp;путешественника
               и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская
               коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест
               исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
@@ -96,9 +101,11 @@
               от&nbsp;которой на&nbsp;юг&nbsp;&mdash;
               тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
             <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического
-              фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных
-              воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору
-              сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть
+              фестиваля&nbsp;в Териберке. Возможно, слово &laquo;Хибины&raquo; не осталось под снегом школьных
+              воспоминаний об&nbsp;уроках географии.&nbsp;Возможно,&nbsp;вы&nbsp;не интересовались пронизывающей земную
+              кору
+              сверхглубокой скважиной,&nbsp;а&nbsp;от&nbsp;апатитов&nbsp;вас&nbsp;давно накрывает апатия. Но&nbsp;ваша
+              мечта увидеть
               северное сияние начинает сбываться с&nbsp;билетом
               в&nbsp;Мурманск.</p>
           </div>
@@ -111,10 +118,11 @@
           </div>
           <img src="images/place__image-3.jpg" alt="Фото ноутбука на фоне леса Алтая" class="place__image">
           <div class="place__description">
-            <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
-              В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами,
-              горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться
-              с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
+            <p class="place__paragraph">Алтай&nbsp;&mdash;&nbsp;одно&nbsp;из&nbsp;красивейших&nbsp;мест в&nbsp;России.
+              В&nbsp;первую очередь из-за гор: если ехать вдоль хребта,&nbsp;вы увидите склоны, усыпанные соснами,
+              горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете
+              познакомиться&nbsp;с
+              невидимым&nbsp;чудом&nbsp;здешних&nbsp;мест&nbsp;&mdash; горным воздухом.</p>
             <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так
               вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами
               летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели
@@ -135,7 +143,8 @@
             </p>
             <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований
               по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-              к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду.
+              к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем&nbsp;старается развить как можно б&oacute;льшую скорость
+              на&nbsp;льду.
               В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой
               рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
           </div>
@@ -151,7 +160,7 @@
             <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
               тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
               на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда
-              не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу,
+              не&nbsp;знали топора. Некоторым соснам уже больше чем&nbsp;полтысячелетия.&nbsp;Прикоснитесь к живому существу,
               видевшему солнце раньше, чем увидал его Иван Грозный.
               В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках
               деревья
