--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
             <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
               Для&nbsp;путешественника
-              и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская
+              и&nbsp;исследователя&nbsp;там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская
               коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест
               исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
           </div>
